--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
 	listen 80 default_server;
 	listen [::]:80 default_server ipv6only=on;
 
-	server_name .localtunnel.me;
+	server_name .ltun.net;
 
 	location / {
 		proxy_pass http://lt-server/;
@@ -35,7 +35,7 @@ server {
 	listen 443 default_server ssl spdy;
 	listen [::]:443 default_server ipv6only=on;
 
-	server_name .localtuunel.me;
+	server_name .ltun.net;
 
 	ssl on;
 
